--- a/src/Asg1.html
+++ b/src/Asg1.html
@@ -63,6 +63,6 @@
         <script src="Circle.js"></script>
         <script src="Triangle.js"></script>
         <script src="Point.js"></script>
-        <script src="ColoredPoints.js"></script>
+        <script src="Asg1.js"></script>
     </body>
 </html>
